[gd_scene load_steps=4 format=3 uid="uid://dncp8kadm3xvd"]

[ext_resource type="Script" path="res://scripts/keyboard_manager.gd" id="1_g1llu"]
[ext_resource type="Script" path="res://scripts/shake_tween.gd" id="2_rksbn"]
[ext_resource type="PackedScene" uid="uid://clqr6tuoe03k5" path="res://scenes/word_manager.tscn" id="3_dhrpr"]

[node name="KeyboardManager" type="Node2D"]
position = Vector2(1, -1)
script = ExtResource("1_g1llu")

[node name="PromptText" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -1.0
offset_right = 45.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/bold_italics_font_size = 18
theme_override_font_sizes/italics_font_size = 18
theme_override_font_sizes/mono_font_size = 18
theme_override_font_sizes/normal_font_size = 18
theme_override_font_sizes/bold_font_size = 18
bbcode_enabled = true
text = "test"
fit_content = true
autowrap_mode = 0

[node name="ShakeTween" type="Node" parent="."]
script = ExtResource("2_rksbn")

[node name="WordManager" parent="." instance=ExtResource("3_dhrpr")]
